# HKU-InnoWing-STT-TTS-Workshop

./: .env.example  .gitignore  InnoWing_Speech_to_Text.ipynb  README.md  demo.py  introduction.ipynb  introduction_colab.ipynb  main.py  plan.md  plan_en.md  pyproject.toml  spectrogram.py  stt.ipynb  tts.ipynb
src/: introduction.ipynb  spectrogram.py  stt.ipynb  tts.ipynb
