[project]
name = "speech-intereaction-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets<4.0.0",
    "gradio>=6.5.1",
    "huggingface-hub>=1.3.7",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentencepiece>=0.2.1",
    "sounddevice>=0.5.5",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "transformers>=5.0.0",
]

[dependency-groups]
dev = ["ipykernel>=7.1.0", "ipywidgets>=8.1.8"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
